2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_type_from_package): Also try
	gperl_param_spec_type_from_package on the package.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Unstable release 1.210.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (add_interfaces): Fail loudly and with a clear error
	message when we encounter an unknown interface when registering a
	new type.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/lazy-loader.t -> t/lazy_loader.t: Rename this test to blend in
	with the others which use underscores to separate words.

2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.exports
	* gperl.h: Properly export gperl_param_spec_type_from_package and
	gperl_register_param_spec, they are meant to be public.

2008-11-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs: Use gperl_register_fundamental_alias to register the
	"Glib::Uint" backwards-compatibility alias.

2008-11-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs
	* GObject.xs
	* GType.xs
	* Glib.exports
	* gperl.h: Provide gperl_register_boxed_alias,
	gperl_register_fundamental_alias, and gperl_register_object_alias
	to register aliases for other registered types.  An alias is a
	package name that will resolve to the specified type, while the
	type will still resolve to its originally registered package when
	going the other way.

2008-11-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/9.t
	* GMainLoop.xs: Wrap g_child_watch_add as Glib::Child::watch_add.
	Patch by Kevin Ryde.

2008-11-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GMainLoop.xs
	* Glib.pm: Add constants Glib::SOURCE_CONTINUE and SOURCE_REMOVE
	for use in source-type callbacks.  Patch by Kevin Ryde.

2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: ExtUtils::MakeMaker 6.46 removed support for
	EXTRA_META in favor of the new META_MERGE and META_ADD.  Adapt.
