@@ -1,3 +1,8 @@
+2008-11-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* GObject.xs: Add newlines at the end of debugging messages that
+	lack them to keep perl from adding line number information.
+
 2008-11-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* GType.xs (gperl_type_from_package): Also try
